refactor CI/CD pipeline (#41)
* only use linting packages in root dir

* seperate server/client testing for pre-push hook

* move config rc files to package.json

* delete old eslint config file

* revamp entire GitHub Actions CI/CD pipeline

* refactor server to include jest testing config

* clean up client dependencies

* add jest testing config to client

* place all workflows in main folder

* create end-to-end test folder for CI/CD

* edit working-directory in workflow steps

* remove working-directory from cache step

* coveralls working-dir step

* working E2E testing

* remove coveralls working-dir from step

* docker_ci working dir error

* try fixing coveralls coverage upload

* try fixing coveralls coverage upload

* organize lint step

* organize need steps for CI/CD

* fix node_ci workflow

* rename repo lint step

* parse jsx w/ babel for linter

* fix test script in workflow

* add emoji to workflow step

* add test coverage report to workflow

* fix workflow yml error

* fix workflow yml error

* add emojis to workflow

* fix workflow yml error

* use npm run test for node v16

* use working-dir again in workflows

* yml typo

* yml typo

* yml typo

* yml typo

* yml typo

* cache node_modules into path

* cache testing modules also

* comment out repo_lint for now

* proper node cache path output;

* proper node cache path output;

* properly generate .env file

* modify coverage threshhold

* work on server ci failure

* work on server ci failure

* work on server ci failure

* work on server ci failure

* work on server ci failure

* work on server ci failure

* work on server ci failure

* work on server ci failure

* work on server ci failure

* work on server ci failure

* fix artifact upload

* fix jest coverage report action

* fix jest coverage report action

* fix jest coverage report action

* debug coverage merge file

*

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,16 @@ name: deploy
 on:
   workflow_call:
     secrets:
+      ENV_PRODUCTION:
+        required: true
+      DOCKERHUB_USERNAME:
+        required: true
+      DOCKERHUB_PASSWORD:
+        required: true
+      DOCKERHUB_CLIENT_REPO:
+        required: true
+      DOCKERHUB_SERVER_REPO:
+        required: true
       EC2_REMOTE_HOST:
         required: true
       EC2_REMOTE_USER:
@@ -11,21 +21,94 @@ on:
         required: true
       EC2_PASSPHRASE:
         required: true
-      EC2_PORT:
-        required: true
+
+env:
+  NODE_VERSION: 16
 
 jobs:
 
-  deploy:
+  docker_publish:
+    name: 🐳 DockerHub Publish
     runs-on: ubuntu-latest
-    name: EC2 Deploy
-    steps:
-      - name: ♻️ Check out Git Repository
-        uses: actions/checkout@v2
-        with:
-          persist-credentials: false
 
-      - name: 🧪 Test EC2 SSH Connection
+    steps:
+      - name: "☁️ Check out Git Repository"
+        uses: actions/checkout@v2
+
+      - name: "🔧 Set up Node"
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: "⚡ Cache [CLIENT] node modules"
+        uses: actions/cache@v2
+        id: npm_client_cache_id
+        with:
+          path: ./client/node_modules
+          key: client-${{ runner.os }}-npm-cache-${{ hashFiles('./client/package-lock.json') }}
+          restore-keys: |
+            client-${{ runner.os }}-npm-cache-
+            client-${{ runner.os }}-
+
+      - name: "📦 Install [CLIENT] dependencies"
+        working-directory: ./client
+        if: steps.npm_client_cache_id.outputs.cache-hit != 'true'
+        run: npm install
+
+      - name: "⚡ Cache [SERVER] node modules"
+        uses: actions/cache@v2
+        id: npm_server_cache_id
+        with:
+          path: ./server/node_modules
+          key: server-${{ runner.os }}-npm-cache-${{ hashFiles('./server/package-lock.json') }}
+          restore-keys: |
+            server-${{ runner.os }}-npm-cache-
+            server-${{ runner.os }}-
+
+      - name: "📦 Install [SERVER] dependencies"
+        working-directory: ./server
+        if: steps.npm_server_cache_id.outputs.cache-hit != 'true'
+        run: npm install
+
+      - name: "🔒 Login to DockerHub"
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: 🔧 Create .env file
+        run: |
+          echo ${{ secrets.ENV_PRODUCTION }} > .env
+          cp .env ./client/.env
+
+      - name: 🐳 DockerHub Publish
+        run:
+          docker-compose build &&
+          docker-compose push
+
+      # - name: "🔧 Set up Docker Buildx"
+      #   uses: docker/setup-buildx-action@v1
+
+      # - name: "🐳 Publish to DockerHub Registry"
+      #   uses: docker/build-push-action@v2
+      #   env:
+      #     DOCKERHUB_REPO: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}
+      #   with:
+      #     context: ${{ env.working-directory }}
+      #     file: Dockerfile
+      #     builder: ${{ steps.buildx.outputs.name }}
+      #     push: true
+      #     tags: ${{ env.DOCKERHUB_REPO }}:latest
+      #     cache-from: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache
+      #     cache-to: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache,mode=max
+
+  deploy_ec2:
+    needs: [docker_publish]
+    name: 🚀 EC2 Depoyment
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: "🧪 Test EC2 SSH Connection"
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_REMOTE_HOST }}
@@ -40,59 +123,43 @@ jobs:
             echo -e "$GREEN Connected to the EC2 Instance! $NC"
             exit 0
 
-      - name: Deploy to EC2 Server
-        run: |
-          RED='\033[0;31m'
-          NC='\033[0m' # No Color
-          echo -e "EC2 Instance cannot docker-compose build fast enough"
-          echo -e "$RED Skipping EC2 Deployment $NC"
+      - name: "♻️ Deploy Docker Containers"
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_REMOTE_HOST }}
+          username: ${{ secrets.EC2_REMOTE_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          passphrase: ${{ secrets.EC2_PASSPHRASE }}
+          port: 22
+          script_stop: true
+          script: |
+            RED='\033[0;31'
+            BLUE='\033[34m'
+            GREEN='\033[0;32m'
+            NC='\033[0m' # No Color
+            echo -e "$BLUE Starting EC2 deployment script $NC"
 
-        # uses: appleboy/ssh-action@master
-        # with:
-        #   host: ${{ secrets.EC2_REMOTE_HOST }}
-        #   username: ${{ secrets.EC2_REMOTE_USER }}
-        #   key: ${{ secrets.EC2_SSH_KEY }}
-        #   passphrase: ${{ secrets.EC2_PASSPHRASE }}
-        #   port: 22
-        #   timeout: 200m
-        #   command_timeout: 200m
-        #   script_stop: true
-        #   script: |
-        #     RED='\033[0;31m'
-        #     GREEN='\033[0;32m'
-        #     NC='\033[0m' # No Color
-        #     echo -e "$GREEN Starting EC2 deployment script $NC"
+            sudo service docker stop
 
-        #     # docker kill $(docker ps -q)
-        #     # docker rm $(docker ps -a -q)
-        #     # echo -e "$GREEN Successfully stopped all docker containers $NC \n"
+            rm -f .env
+            echo "${{ secrets.ENV_PRODUCTION }}" > .env
+            # ls -a
+            echo -e "$GREEN Created the production .env file $NC"
 
-        #     # docker rmi $(docker images -q)
-        #     # echo -e "$GREEN Successfully removed all docker images $NC \n"
+            docker system prune -a --volumes -f
+            echo -e "$RED Removed existing Docker containers $NC"
 
-        #     echo -e "Is there a .env file in the root directory?"
-        #     test -e ~/.env && echo -e "$GREEN env file exists" || echo -e "$RED env file not found $NC && exit 1"
+            sudo service docker start
 
-        #     # rm -rf /${{ github.event.repository.name }}
-        #     rm -rf woofer
-        #     echo -e "$GREEN Deleted old repository folder $NC \n"
+            echo -e "$BLUE Authenticating Docker $NC"
+            docker login -u="${{ secrets.DOCKERHUB_USERNAME }}" -p="${{ secrets.DOCKERHUB_PASSWORD }}"
 
-        #     git clone "https://github.com/${{ github.repository }}.git"
-        #     echo -e "$GREEN Successfully cloned the repository $NC \n"
+            docker run --env-file ./.env -d -p 5000:5000 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}:latest --name ${{ secrets.DOCKERHUB_SERVER_REPO }}
+            echo -e "$BLUE Started up latest Server image $NC"
 
-        #     cp .env ./${{ github.event.repository.name }}/.env
-        #     cp .env ./${{ github.event.repository.name }}/client/.env
-        #     echo -e "$GREEN Duplicated the .env file $NC \n"
+            docker run --env-file ./.env -d -p 80:3000 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_CLIENT_REPO }}:latest
+            echo -e "$BLUE Started up latest Server image $NC"
 
-        #     cd ${{ github.event.repository.name }}
+            sudo iptables -t nat -A PREROUTING -i eth0 -p tcp --dport 80 -j REDIRECT --to-port 3000
 
-        #     docker-compose down
-        #     echo -e "$GREEN Stopped existing container $NC \n"
-
-        #     docker-compose up --build -d
-
-        #     sudo iptables -t nat -A PREROUTING -i eth0 -p tcp --dport 80 -j REDIRECT --to-port 3000
-
-        #     echo -e "$GREEN Successfully started the docker container! $NC \n"
-
-        #     echo -e "$GREEN EC2 deployment complete! $NC"
+            echo -e "$GREEN EC2 deployment complete! $NC"
