--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /usr/src/app/
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 
 COPY package.json .
+COPY package-lock.json .
+COPY .env .
 RUN npm install
 
 COPY . .
@@ -20,5 +22,9 @@ RUN npm run build
 FROM nginx:1.16.0-alpine
 RUN rm -rf /usr/share/nginx/html/*
 COPY --from=builder /usr/src/app/build /usr/share/nginx/html
-EXPOSE 80
+
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+
+
+EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
