--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -29,7 +29,6 @@ jobs:
           restore-keys: |
             lint-${{ runner.os }}-npm-cache-
             lint-${{ runner.os }}-
-
       - name: "📦 Install linter dependencies"
         if: steps.npm_cache_id.outputs.cache-hit != 'true'
         run: npm install
@@ -37,7 +36,7 @@ jobs:
       - name: "🧽 Lint all files"
         run: npm run lint --if-present
 
-  client_ci:
+  client_test:
     needs: [repo_lint]
     runs-on: ${{ matrix.os }}
     env:
@@ -98,11 +97,50 @@ jobs:
           path: ${{ env.working-directory }}/coverage/lcov.info
           retention-days: 3
 
+  client_build:
+    needs: [repo_lint]
+    runs-on: ${{ matrix.os }}
+    env:
+      working-directory: ./client
+    strategy:
+      fail-fast: false
+      matrix:
+        node: ['12', '14', '16']
+        os: [ubuntu-latest]
+
+    name: Client Build
+    steps:
+      - name: "☁️ Check out Git Repository"
+        uses: actions/checkout@v2
+
+      - name: "⚙️ Generate .env file"
+        run: |
+          mv .env.sample ${{ env.working-directory }}/.env
+
+      - name: "🔧 Set up Node"
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
+
+      - name: "⚡ Cache node modules"
+        uses: actions/cache@v2
+        id: npm_cache_id
+        with:
+          path: ./client/node_modules
+          key: client-${{ runner.os }}-npm-cache-${{ hashFiles('./client/package-lock.json') }}
+          restore-keys: |
+            client-${{ runner.os }}-npm-cache-
+            client-${{ runner.os }}-
+
+      - name: "📦 Install dependencies"
+        working-directory: ${{ env.working-directory }}
+        if: steps.npm_cache_id.outputs.cache-hit != 'true'
+
       - name: "🏗 Build client"
         working-directory: ${{ env.working-directory }}
         run: npm run build --if-present
 
-  server_ci:
+  server_test:
     needs: [repo_lint]
     runs-on: ${{ matrix.os }}
     env:
@@ -140,7 +178,6 @@ jobs:
           restore-keys: |
             server-${{ runner.os }}-npm-cache-
             server-${{ runner.os }}-
-
       - name: "📦 Install dependencies"
         working-directory: ${{ env.working-directory }}
         if: steps.npm_cache_id.outputs.cache-hit != 'true'
@@ -169,7 +206,7 @@ jobs:
     permissions:
       checks: write
       pull-requests: write
-    needs: [client_ci, server_ci]
+    needs: [client_test, server_test]
     runs-on: ubuntu-latest
 
     steps:
@@ -181,7 +218,6 @@ jobs:
       - name: "📜 Copy the client coverage file"
         run: |
           mv coverage-final.json client-coverage-final.json
-
       - name: "⬇️ Download the server test coverage report"
         uses: actions/download-artifact@v3
         with:
@@ -190,7 +226,6 @@ jobs:
       - name: "📜 Copy the server coverage file"
         run: |
           mv coverage-final.json server-coverage-final.json
-
       - name: "🔧 Set up Node"
         uses: actions/setup-node@v1
         with:
@@ -208,7 +243,7 @@ jobs:
 
   coverage_upload:
     name: Coverage Coveralls.io Upload
-    needs: [client_ci, server_ci]
+    needs: [client_test, server_test]
     runs-on: ubuntu-latest
 
     steps:
@@ -220,7 +255,6 @@ jobs:
       - name: "📜 Copy the client lcov coverage file"
         run: |
           mv lcov.info client-report.lcov
-
       - name: "⬇️ Download the server test coverage lcov report"
         uses: actions/download-artifact@v3
         with:
@@ -229,7 +263,6 @@ jobs:
       - name: "📜 Copy the server lcov coverage file"
         run: |
           mv lcov.info server-report.lcov
-
       - name: "🔧 Set up Node"
         uses: actions/setup-node@v1
         with:
