remove npm cache broken

--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -46,8 +46,8 @@ jobs:
             server-${{ runner.os }}-npm-cache-
             server-${{ runner.os }}-
       - name: "📦 Install [SERVER] dependencies"
-        # working-directory: ./server
-        if: steps.npm_server_cache_id.outputs.cache-hit != 'true'
+        working-directory: ./server
+        # if: steps.npm_server_cache_id.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "⚡ Cache Docker Build"
