--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -16,6 +16,7 @@ jobs:
     uses: ./.github/workflows/docker_ci.yml
 
   deploy:
+    needs: [docker_ci]
     # needs: [node_ci, docker_ci]
     uses: ./.github/workflows/deploy.yml
     secrets:
